# CUDA-Photogrammetry-Rotation-Estimation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/asy/: estimation_up.asy  estimation_yaw.asy  quantization.asy  subdivision.asy
src/: Demo.cpp  DeviceBuffer.cu  EstimateRotation.cu  EstimateRotation.h  Tests.cpp  Tests.h  Utilities.cpp  Utilities.h
